--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
   /* Add your custom configuration here. */
   "compilerOptions": {
     "strict": false
-  }
+  },
+
+  "exclude": [
+    "./extensions",
+  ]
 }
