asset ref search

--- a/extensions/kk-assist/package.json
+++ b/extensions/kk-assist/package.json
@@ -48,6 +48,12 @@
                 "nodeMenu": "onNodeMenu"
             }
         },
+        "assets": {
+            "menu": {
+                "methods": "./dist/assets-menu.js",
+                "assetMenu": "onAssetMenu"
+            }
+        },
         "messages": {
             "open-panel": {
                 "methods": [
